[package]
name = "acbc"
version = "0.1.0"
authors = ["Richard Bradfield <bradfier@fstab.me>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/bradfier/acbc"
homepage = "https://github.com/bradfier/acbc"
description = """
A protcol decoder crate for the ACC Broadcasting API by Kunos Simulazioni
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
thiserror = "1"
tinyvec = "1"
nom-supreme = "0.4.2"
byteorder = "1.4.3"
log = "0.4.14"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "incoming_decoder"
harness = false
